# CppOpenNI4OpenCV

./: README.md
src/: ARC1.2.cpp  CMakeLists.txt  SamplesConfig.xml  convert.h
